"Added a checkout classes and till place order success test & added workflow config"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>sanity.bateel.SanityBateelLoginAndNavigationTest</td>
+<td>sanity.bateel.SanityBateelGuestCheckout</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testBateelHomeCategoryNavigation</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testBateelPageHeaderTitle</td>
+<td>testguestcheckout</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
