--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Local Test Suite</th></tr>
-<tr><td><a href="#t0">Local Tests</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">123,475</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Local Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,994</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLoginAndNavigationTest</td><td><a href="#m0">testBateelShopCategoryNavigation</a></td><td rowspan="1">1712058929135</td><td rowspan="1">30296</td></tr><tr class="passedodd"><td rowspan="1">sanity.bateel.SanityBateelProduct</td><td><a href="#m1">testBateelclickproduct</a></td><td rowspan="1">1712058961024</td><td rowspan="1">43879</td></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelProductDetails</td><td><a href="#m2">testBateelproductfilldetails</a></td><td rowspan="1">1712059005218</td><td rowspan="1">42786</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLoginAndNavigationTest</td><td><a href="#m0">testBateelShopCategoryNavigation</a></td><td rowspan="1">1712683604488</td><td rowspan="1">33534</td></tr></tbody>
 </table>
 <h2>Local Tests</h2><h3 id="m0">sanity.bateel.SanityBateelLoginAndNavigationTest#testBateelShopCategoryNavigation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">sanity.bateel.SanityBateelProduct#testBateelclickproduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">sanity.bateel.SanityBateelProductDetails#testBateelproductfilldetails</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
