--- a/test-output/index.html
+++ b/test-output/index.html
@@ -7,7 +7,7 @@
 
     <link type="text/css" href="testng-reports1.css" rel="stylesheet" id="ultra" />
     <link type="text/css" href="testng-reports.css" rel="stylesheet" id="retro" disabled="false"/>
-    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type='text/javascript'>
@@ -21,7 +21,8 @@
      -->
   </head>
 
-  <body>    <div class="top-banner-root">
+  <body>
+    <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
@@ -92,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,16 +105,6 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelLoginAndNavigationTest" class="method navigator-link" hash-for-method="testBateelShopCategoryNavigation">testBateelShopCategoryNavigation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelProduct" class="method navigator-link" hash-for-method="testBateelclickproduct">testBateelclickproduct</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelProductDetails" class="method navigator-link" hash-for-method="testBateelproductfilldetails">testBateelproductfilldetails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Local_Test_Suite -->
@@ -143,36 +134,6 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Local_Test_Suite-class-passed -->
-          <div class="suite-Local_Test_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">sanity.bateel.SanityBateelProduct</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testBateelclickproduct">
-                  </a> <!-- testBateelclickproduct -->
-                  <span class="method-name">testBateelclickproduct</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Local_Test_Suite-class-passed -->
-          <div class="suite-Local_Test_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">sanity.bateel.SanityBateelProductDetails</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testBateelproductfilldetails">
-                  </a> <!-- testBateelproductfilldetails -->
-                  <span class="method-name">testBateelproductfilldetails</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Local_Test_Suite-class-passed -->
         </div> <!-- panel Local_Test_Suite -->
         <div panel-name="test-xml-Local_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -193,16 +154,6 @@
           &lt;include name=&quot;testBateelShopCategoryNavigation&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- sanity.bateel.SanityBateelLoginAndNavigationTest --&gt;
-      &lt;class name=&quot;sanity.bateel.SanityBateelProduct&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;testBateelclickproduct&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- sanity.bateel.SanityBateelProduct --&gt;
-      &lt;class name=&quot;sanity.bateel.SanityBateelProductDetails&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;testBateelproductfilldetails&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- sanity.bateel.SanityBateelProductDetails --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Local Tests --&gt;
 &lt;/suite&gt; &lt;!-- Local Test Suite --&gt;
@@ -216,7 +167,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Local Tests (3 classes)</span>
+                <span class="test-name">Local Tests (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -242,24 +193,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testBateelclickproduct')
-data.setCell(0, 2, 'sanity.bateel.SanityBateelProduct')
-data.setCell(0, 3, 43879);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testBateelproductfilldetails')
-data.setCell(1, 2, 'sanity.bateel.SanityBateelProductDetails')
-data.setCell(1, 3, 42786);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testBateelShopCategoryNavigation')
-data.setCell(2, 2, 'sanity.bateel.SanityBateelLoginAndNavigationTest')
-data.setCell(2, 3, 30296);
+data.setCell(0, 1, 'testBateelShopCategoryNavigation')
+data.setCell(0, 2, 'sanity.bateel.SanityBateelLoginAndNavigationTest')
+data.setCell(0, 3, 33534);
 window.suiteTableData['Local_Test_Suite']= { tableData: data, tableDiv: 'times-div-Local_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 33 seconds</span>
               <div id="times-div-Local_Test_Suite">
               </div> <!-- times-div-Local_Test_Suite -->
             </div> <!-- times-div -->
@@ -289,20 +232,6 @@ return data;
               <div class="test-method">
                 <span class="method-name">testBateelShopCategoryNavigation</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">sanity.bateel.SanityBateelProduct</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testBateelclickproduct</span>
-                <span class="method-start">31889 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">sanity.bateel.SanityBateelProductDetails</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testBateelproductfilldetails</span>
-                <span class="method-start">76083 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
