--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f1cd63">  <td>24/03/18 15:06:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLoginAndNavigationTest.testBateelPageHeaderTitle()[pri:0, instance:sanity.bateel.SanityBateelLoginAndNavigationTest@35f8a9d3]">testBateelPageHeaderTitle</td> 
-  <td>main@1227041903</td>   <td></td> </tr>
-<tr bgcolor="f1cd63">  <td>24/03/18 15:04:52</td>   <td>-82869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLoginAndNavigationTest.testBateelHomeCategoryNavigation()[pri:0, instance:sanity.bateel.SanityBateelLoginAndNavigationTest@35f8a9d3]">testBateelHomeCategoryNavigation</td> 
-  <td>main@1227041903</td>   <td></td> </tr>
+<tr bgcolor="b1777a">  <td>24/04/09 16:45:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelGuestCheckout.testguestcheckout()[pri:0, instance:sanity.bateel.SanityBateelGuestCheckout@2d6aca33]">testguestcheckout</td> 
+  <td>main@171751994</td>   <td></td> </tr>
 </table>
