--- a/test-output/old/Local Test Suite/classes.html
+++ b/test-output/old/Local Test Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>sanity.bateel.SanityBateelMainNavigationmenu</td>
+<td>sanity.bateel.SanityBateelGuestCheckout</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>mainmenu</td>
+<td>testguestcheckout</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
