"Checkout with login user with invalid card details"
Signed-off-by: Shivam Rai <shivam.rai@krishtechnolabs.local>

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">115,912</td><td></td><td></td></tr>
+<tr><th colspan="8">Local Test Suite</th></tr>
+<tr><td><a href="#t0">Local Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">219,775</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelGuestCheckout</td><td><a href="#m0">testguestcheckout</a></td><td rowspan="1">1726552510967</td><td rowspan="1">111064</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails</td><td><a href="#m0">testBateelLiveCheckoutWithInvalidCard</a></td><td rowspan="1">1727175538224</td><td rowspan="1">213869</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">sanity.bateel.SanityBateelGuestCheckout#testguestcheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Local Tests</h2><h3 id="m0">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails#testBateelLiveCheckoutWithInvalidCard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
