"Added Transaction Flow"
Signed-off-by: Shivam Rai <shivam.rai@krishtechnolabs.local>

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Local_Test_Suite" class="navigator-link">
-              <span class="suite-name border-passed">Local Test Suite</span>
+              <span class="suite-name border-failed">Local Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Local_Test_Suite" class="navigator-link ">
-                    <span>C:\Users\shivam.rai.KRISH\Desktop\Bateel\Bateel_Automation\src\test\resources\LocalTestSuite.xml</span>
+                    <span>C:\Users\shivam.rai.KRISH\Desktop\Bateel\Bateel_Automation\src\test\resources\TransactionSuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Local_Test_Suite" class="hide-methods failed suite-Local_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-Local_Test_Suite -->
+                      <a href="#" panel-name="suite-Local_Test_Suite" class="show-methods failed suite-Local_Test_Suite"> (show)</a> <!-- show-methods failed suite-Local_Test_Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Local_Test_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails" class="method navigator-link" hash-for-method="testBateelLiveCheckoutWithInvalidCard">testBateelLiveCheckoutWithInvalidCard</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Local_Test_Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +118,7 @@
                     <div class="method-list-content passed suite-Local_Test_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails" class="method navigator-link" hash-for-method="testBateelLiveCheckoutWithInvalidCard">testBateelLiveCheckoutWithInvalidCard</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelLiveCheckout" class="method navigator-link" hash-for-method="testBateelLiveCheckout">testBateelLiveCheckout</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Local_Test_Suite -->
@@ -119,9 +133,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Local_Test_Suite" class="panel Local_Test_Suite">
-          <div class="suite-Local_Test_Suite-class-passed">
+          <div class="suite-Local_Test_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -130,6 +144,27 @@
                   <a name="testBateelLiveCheckoutWithInvalidCard">
                   </a> <!-- testBateelLiveCheckoutWithInvalidCard -->
                   <span class="method-name">testBateelLiveCheckoutWithInvalidCard</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [The transaction could not be processed] but found [Your card details are incorrect.]
+	at page.bateel.BateelLoginCheckoutPage.handleErrorMessage(BateelLoginCheckoutPage.java:132)
+	at sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails.testBateelLiveCheckoutWithInvalidCard(SanityBateelLiveCheckoutWithInvalidCardDetails.java:51)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Local_Test_Suite-class-failed -->
+          <div class="suite-Local_Test_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">sanity.bateel.SanityBateelLiveCheckout</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testBateelLiveCheckout">
+                  </a> <!-- testBateelLiveCheckout -->
+                  <span class="method-name">testBateelLiveCheckout</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +172,7 @@
         </div> <!-- panel Local_Test_Suite -->
         <div panel-name="test-xml-Local_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\shivam.rai.KRISH\Desktop\Bateel\Bateel_Automation\src\test\resources\LocalTestSuite.xml</span>
+            <span class="header-content">C:\Users\shivam.rai.KRISH\Desktop\Bateel\Bateel_Automation\src\test\resources\TransactionSuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -149,6 +184,11 @@
     &lt;parameter name=&quot;defaultTimeout&quot; value=&quot;30&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;sanity.bateel.SanityBateelLiveCheckout&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;testBateelLiveCheckout&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- sanity.bateel.SanityBateelLiveCheckout --&gt;
       &lt;class name=&quot;sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails&quot;&gt;
         &lt;methods&gt;
           &lt;include name=&quot;testBateelLiveCheckoutWithInvalidCard&quot;/&gt;
@@ -167,7 +207,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Local Tests (1 class)</span>
+                <span class="test-name">Local Tests (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -193,16 +233,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testBateelLiveCheckoutWithInvalidCard')
-data.setCell(0, 2, 'sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails')
-data.setCell(0, 3, 213869);
+data.setCell(0, 1, 'testBateelLiveCheckout')
+data.setCell(0, 2, 'sanity.bateel.SanityBateelLiveCheckout')
+data.setCell(0, 3, 193948);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testBateelLiveCheckoutWithInvalidCard')
+data.setCell(1, 2, 'sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails')
+data.setCell(1, 3, 159434);
 window.suiteTableData['Local_Test_Suite']= { tableData: data, tableDiv: 'times-div-Local_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 5 minutes</span>
               <div id="times-div-Local_Test_Suite">
               </div> <!-- times-div-Local_Test_Suite -->
             </div> <!-- times-div -->
@@ -228,10 +272,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">sanity.bateel.SanityBateelLiveCheckout</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testBateelLiveCheckout</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails</div> <!-- chronological-class-name -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">testBateelLiveCheckoutWithInvalidCard</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">194426 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
