--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Local Test Suite</th></tr>
-<tr><td><a href="#t0">Local Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">219,775</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Local Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">356,516</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails</td><td><a href="#m0">testBateelLiveCheckoutWithInvalidCard</a></td><td rowspan="1">1727175538224</td><td rowspan="1">213869</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails</td><td><a href="#m0">testBateelLiveCheckoutWithInvalidCard</a></td><td rowspan="1">1727255285264</td><td rowspan="1">159434</td></tr><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLiveCheckout</td><td><a href="#m1">testBateelLiveCheckout</a></td><td rowspan="1">1727255090838</td><td rowspan="1">193948</td></tr></tbody>
 </table>
-<h2>Local Tests</h2><h3 id="m0">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails#testBateelLiveCheckoutWithInvalidCard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Local Tests</h2><h3 id="m0">sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails#testBateelLiveCheckoutWithInvalidCard</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [The transaction could not be processed] but found [Your card details are incorrect.]
+	at page.bateel.BateelLoginCheckoutPage.handleErrorMessage(BateelLoginCheckoutPage.java:132)
+	at sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails.testBateelLiveCheckoutWithInvalidCard(SanityBateelLiveCheckoutWithInvalidCardDetails.java:51)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">sanity.bateel.SanityBateelLiveCheckout#testBateelLiveCheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
