--- a/test-output/old/Local Test Suite/methods.html
+++ b/test-output/old/Local Test Suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Local Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="787d96">  <td>24/09/24 16:28:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLiveCheckoutWithInvalidCardDetails.testBateelLiveCheckoutWithInvalidCard()[pri:0, instance:sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails@460b6d54]">testBateelLiveCheckoutWithInvalidCard</td> 
+<tr bgcolor="847d92">  <td>24/09/25 14:38:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLiveCheckoutWithInvalidCardDetails.testBateelLiveCheckoutWithInvalidCard()[pri:0, instance:sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails@2571066a]">testBateelLiveCheckoutWithInvalidCard</td> 
+  <td>main@295530567</td>   <td></td> </tr>
+<tr bgcolor="89e7a7">  <td>24/09/25 14:34:50</td>   <td>-194427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLiveCheckout.testBateelLiveCheckout()[pri:0, instance:sanity.bateel.SanityBateelLiveCheckout@74971ed9]">testBateelLiveCheckout</td> 
   <td>main@295530567</td>   <td></td> </tr>
 </table>
