"Created a live site online payment script and with having enter card number issue"
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/test-output/old/Sanity Test Suite/methods.html
+++ b/test-output/old/Sanity Test Suite/methods.html
@@ -1,8 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sanity Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e4a287">  <td>24/02/22 10:06:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityOnitsukaLoginAndNavigationTest.testOnitSukaMenCategoryNavigation()[pri:0, instance:sanity.onitsuka.SanityOnitsukaLoginAndNavigationTest@7428de63]">testOnitSukaMenCategoryNavigation</td> 
-  <td>main@46087876</td>   <td></td> </tr>
-<tr bgcolor="e4a287">  <td>24/02/22 10:07:32</td>   <td>74961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityOnitsukaLoginAndNavigationTest.testOnitSukaPageHeaderTitle()[pri:0, instance:sanity.onitsuka.SanityOnitsukaLoginAndNavigationTest@7428de63]">testOnitSukaPageHeaderTitle</td> 
-  <td>main@46087876</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:33:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.Footercmslinks()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">Footercmslinks</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="aabb8f">  <td>24/09/23 14:42:04</td>   <td>485607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelGuestCheckout.testguestcheckout()[pri:0, instance:sanity.bateel.SanityBateelGuestCheckout@3a022576]">testguestcheckout</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="d17ab6">  <td>24/09/23 14:50:12</td>   <td>973512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelProduct.testBateelclickproduct()[pri:0, instance:sanity.bateel.SanityBateelProduct@1a5f7e7c]">testBateelclickproduct</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:32:40</td>   <td>-78621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FooterPrivacypolicylink()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">FooterPrivacypolicylink</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:33:17</td>   <td>-42057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FooterTermsandconditionslink()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">FooterTermsandconditionslink</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:41:02</td>   <td>423398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.Footersocialmediainstagram()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">Footersocialmediainstagram</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:35:52</td>   <td>113673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.Footerlogo()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">Footerlogo</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="bc73de">  <td>24/09/23 14:48:11</td>   <td>852767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelMainNavigationmenu.mainmenu()[pri:0, instance:sanity.bateel.SanityBateelMainNavigationmenu@31ddd4a4]">mainmenu</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>24/09/23 14:44:54</td>   <td>655839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLogincheckout.testBateeladdtocartitemloginuser()[pri:0, instance:sanity.bateel.SanityBateelLogincheckout@3e48e859]">testBateeladdtocartitemloginuser</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="73806b">  <td>24/09/23 14:30:41</td>   <td>-197196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelCart.testBateeladdtocartitem()[pri:0, instance:sanity.bateel.SanityBateelCart@ecfbe91]">testBateeladdtocartitem</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:37:02</td>   <td>183693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaLinkedin()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">FootersocialmediaLinkedin</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:38:15</td>   <td>255997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaTwitter()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">FootersocialmediaTwitter</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:36:15</td>   <td>136471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaFacebook()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">FootersocialmediaFacebook</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="e29c84">  <td>24/09/23 14:51:13</td>   <td>1034392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelProductDetails.testBateelproductfilldetails()[pri:0, instance:sanity.bateel.SanityBateelProductDetails@5b22b970]">testBateelproductfilldetails</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="b2f8e5">  <td>24/09/23 14:39:37</td>   <td>338241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaYoutube()[pri:0, instance:sanity.bateel.SanityBateelFootersection@3b569985]">FootersocialmediaYoutube</td> 
+  <td>main@53871235</td>   <td></td> </tr>
+<tr bgcolor="8387fa">  <td>24/09/23 14:44:17</td>   <td>618539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLoginAndNavigationTest.testBateelShopCategoryNavigation()[pri:0, instance:sanity.bateel.SanityBateelLoginAndNavigationTest@2dbd803f]">testBateelShopCategoryNavigation</td> 
+  <td>main@53871235</td>   <td></td> </tr>
 </table>
