--- a/test-output/index.html
+++ b/test-output/index.html
@@ -144,7 +144,7 @@
                   <a name="testBateelLiveCheckoutWithInvalidCard">
                   </a> <!-- testBateelLiveCheckoutWithInvalidCard -->
                   <span class="method-name">testBateelLiveCheckoutWithInvalidCard</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [The transaction could not be processed] but found [Your card details are incorrect.]
+                  <div class="stack-trace">java.lang.AssertionError: expected [The customer was not redirected as expected.] but found [Customer should be redirected to the visa page]
 	at page.bateel.BateelLoginCheckoutPage.handleErrorMessage(BateelLoginCheckoutPage.java:132)
 	at sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails.testBateelLiveCheckoutWithInvalidCard(SanityBateelLiveCheckoutWithInvalidCardDetails.java:51)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
@@ -237,11 +237,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testBateelLiveCheckout')
 data.setCell(0, 2, 'sanity.bateel.SanityBateelLiveCheckout')
-data.setCell(0, 3, 193948);
+data.setCell(0, 3, 186346);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testBateelLiveCheckoutWithInvalidCard')
 data.setCell(1, 2, 'sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails')
-data.setCell(1, 3, 159434);
+data.setCell(1, 3, 173134);
 window.suiteTableData['Local_Test_Suite']= { tableData: data, tableDiv: 'times-div-Local_Test_Suite'}
 return data;
 }
@@ -284,7 +284,7 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">testBateelLiveCheckoutWithInvalidCard</span>
-                <span class="method-start">194426 ms</span>
+                <span class="method-start">187019 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
