--- a/test-output/old/Sanity Test Suite/methods.html
+++ b/test-output/old/Sanity Test Suite/methods.html
@@ -1,8 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sanity Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e4a287">  <td>24/02/22 10:06:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityOnitsukaLoginAndNavigationTest.testOnitSukaMenCategoryNavigation()[pri:0, instance:sanity.onitsuka.SanityOnitsukaLoginAndNavigationTest@7428de63]">testOnitSukaMenCategoryNavigation</td> 
-  <td>main@46087876</td>   <td></td> </tr>
-<tr bgcolor="e4a287">  <td>24/02/22 10:07:32</td>   <td>74961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityOnitsukaLoginAndNavigationTest.testOnitSukaPageHeaderTitle()[pri:0, instance:sanity.onitsuka.SanityOnitsukaLoginAndNavigationTest@7428de63]">testOnitSukaPageHeaderTitle</td> 
-  <td>main@46087876</td>   <td></td> </tr>
+<tr bgcolor="8bb66d">  <td>24/09/26 14:18:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelProduct.testBateelclickproduct()[pri:0, instance:sanity.bateel.SanityBateelProduct@353efdbf]">testBateelclickproduct</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:04:25</td>   <td>-843076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.Footercmslinks()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">Footercmslinks</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="d5929a">  <td>24/09/26 14:19:05</td>   <td>37652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelProductDetails.testBateelproductfilldetails()[pri:0, instance:sanity.bateel.SanityBateelProductDetails@55cff952]">testBateelproductfilldetails</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:05:54</td>   <td>-754149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.Footerlogo()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">Footerlogo</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:03:15</td>   <td>-912202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FooterPrivacypolicylink()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">FooterPrivacypolicylink</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="728dab">  <td>24/09/26 14:13:14</td>   <td>-313531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLoginAndNavigationTest.testBateelShopCategoryNavigation()[pri:0, instance:sanity.bateel.SanityBateelLoginAndNavigationTest@1ecfcbc9]">testBateelShopCategoryNavigation</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:08:34</td>   <td>-593878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaYoutube()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">FootersocialmediaYoutube</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="f57685">  <td>24/09/26 14:10:13</td>   <td>-494230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelGuestCheckout.testguestcheckout()[pri:0, instance:sanity.bateel.SanityBateelGuestCheckout@773dab28]">testguestcheckout</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:03:47</td>   <td>-880503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FooterTermsandconditionslink()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">FooterTermsandconditionslink</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="66bf6c">  <td>24/09/26 14:01:30</td>   <td>-1017658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelCart.testBateeladdtocartitem()[pri:0, instance:sanity.bateel.SanityBateelCart@73a00e09]">testBateeladdtocartitem</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:07:47</td>   <td>-640998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaTwitter()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">FootersocialmediaTwitter</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="9d82f9">  <td>24/09/26 14:13:46</td>   <td>-281512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLogincheckout.testBateeladdtocartitemloginuser()[pri:0, instance:sanity.bateel.SanityBateelLogincheckout@1965539b]">testBateeladdtocartitemloginuser</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:09:19</td>   <td>-548308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.Footersocialmediainstagram()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">Footersocialmediainstagram</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>24/09/26 14:16:27</td>   <td>-120633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelMainNavigationmenu.mainmenu()[pri:0, instance:sanity.bateel.SanityBateelMainNavigationmenu@2fc07784]">mainmenu</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:06:14</td>   <td>-734025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaFacebook()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">FootersocialmediaFacebook</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
+<tr bgcolor="6a6b94">  <td>24/09/26 14:07:02</td>   <td>-685854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelFootersection.FootersocialmediaLinkedin()[pri:0, instance:sanity.bateel.SanityBateelFootersection@af78c87]">FootersocialmediaLinkedin</td> 
+  <td>main@1305669460</td>   <td></td> </tr>
 </table>
