--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ca5e1">  <td>24/09/25 13:28:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLiveCheckoutWithInvalidCardDetails.testBateelLiveCheckoutWithInvalidCard()[pri:0, instance:sanity.bateel.SanityBateelLiveCheckoutWithInvalidCardDetails@659925f4]">testBateelLiveCheckoutWithInvalidCard</td> 
+<tr bgcolor="8a69b4">  <td>24/09/26 13:08:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLiveCheckout.testBateelLiveCheckout()[pri:0, instance:sanity.bateel.SanityBateelLiveCheckout@7dd00705]">testBateelLiveCheckout</td> 
   <td>main@295530567</td>   <td></td> </tr>
 </table>
