Code optimize and run all local tests success.
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Local Test Suite</th></tr>
-<tr><td><a href="#t0">Local Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,210</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Local Tests</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">216,609</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLogin</td><td><a href="#m0">customerlogintest</a></td><td rowspan="1">1728545353028</td><td rowspan="1">46269</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Local Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Local Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sanity.bateel.SanityBateelLogincheckout</td><td><a href="#m0">testBateeladdtocartitemloginuser</a></td><td rowspan="1">1728883687559</td><td rowspan="1">210491</td></tr></tbody>
 </table>
-<h2>Local Tests</h2><h3 id="m0">sanity.bateel.SanityBateelLogin#customerlogintest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Local Tests</h2><h3 id="m0">sanity.bateel.SanityBateelLogincheckout#testBateeladdtocartitemloginuser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
