--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Local_Test_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelLogin" class="method navigator-link" hash-for-method="customerlogintest">customerlogintest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Local_Test_Suite" title="sanity.bateel.SanityBateelLogincheckout" class="method navigator-link" hash-for-method="testBateeladdtocartitemloginuser">testBateeladdtocartitemloginuser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Local_Test_Suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Local_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">sanity.bateel.SanityBateelLogin</span>
+              <span class="class-name">sanity.bateel.SanityBateelLogincheckout</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="customerlogintest">
-                  </a> <!-- customerlogintest -->
-                  <span class="method-name">customerlogintest</span>
+                  <a name="testBateeladdtocartitemloginuser">
+                  </a> <!-- testBateeladdtocartitemloginuser -->
+                  <span class="method-name">testBateeladdtocartitemloginuser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,11 +149,11 @@
     &lt;parameter name=&quot;defaultTimeout&quot; value=&quot;30&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;sanity.bateel.SanityBateelLogin&quot;&gt;
+      &lt;class name=&quot;sanity.bateel.SanityBateelLogincheckout&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;customerlogintest&quot;/&gt;
+          &lt;include name=&quot;testBateeladdtocartitemloginuser&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- sanity.bateel.SanityBateelLogin --&gt;
+      &lt;/class&gt; &lt;!-- sanity.bateel.SanityBateelLogincheckout --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Local Tests --&gt;
 &lt;/suite&gt; &lt;!-- Local Test Suite --&gt;
@@ -195,14 +195,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'customerlogintest')
-data.setCell(0, 2, 'sanity.bateel.SanityBateelLogin')
-data.setCell(0, 3, 46269);
+data.setCell(0, 1, 'testBateeladdtocartitemloginuser')
+data.setCell(0, 2, 'sanity.bateel.SanityBateelLogincheckout')
+data.setCell(0, 3, 210491);
 window.suiteTableData['Local_Test_Suite']= { tableData: data, tableDiv: 'times-div-Local_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 46 seconds</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Local_Test_Suite">
               </div> <!-- times-div-Local_Test_Suite -->
             </div> <!-- times-div -->
@@ -228,9 +228,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">sanity.bateel.SanityBateelLogin</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">sanity.bateel.SanityBateelLogincheckout</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">customerlogintest</span>
+                <span class="method-name">testBateeladdtocartitemloginuser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
